--- a/src/style.scss
+++ b/src/style.scss
@@ -3,27 +3,41 @@ html {
   background-color: #f78080;
 }
 
+body {
+  margin: 0;
+}
+
 #app {
   font-family: Helvetica, Arial, sans-serif;
   color: wheat;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0;
+  height: 100vh;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   background: #3369b8;
-  width: 400px;
+  width: 380px;
   height: 600px;
   border-radius: 20px;
   padding: 3rem;
-  gap: 1.5rem;
-  .display {
-    height: 150px;
+  box-shadow: 0 5px 10px 5px #995d5d, 0 0 0 30px #fea5a5;
+  .display1 {
+    height: 50px;
+    font-size: 2rem;
+    text-align: right;
+  }
+  .display2 {
+    height: 100px;
     border-bottom: solid 1px whitesmoke;
+    font-size: 5rem;
+    text-align: right;
+    margin-bottom: 1.5rem;
+    font-weight: 700;
+    letter-spacing: 1px;
   }
   .controls {
     display: flex;
@@ -37,8 +51,17 @@ html {
       border-radius: 50%;
       color: #f5f5f5;
       font-size: 3rem;
-      //background: transparent;
-      background: #f5f5f520;
+      background: transparent;
+      &:hover {
+        background: #f5f5f520;
+        cursor: pointer;
+      }
+      &:focus-visible {
+        background: #f5f5f5;
+        color: #3369b8;
+        border: none;
+        outline: none;
+      }
     }
   }
 }
